--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,7 @@
 [tox]
-envlist = py27, py3
+envlist = py36, py37, py38, py39, py310
 
 [testenv]
 deps=-r{toxinidir}/requirements.txt
-     -r{toxinidir}/test-requirements.txt
 
-commands=
-   pytest --cov=titan_client
+commands= pytest --cov=titan_client
