hide 100% covered files in coverage results

--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,4 @@ envlist = py36, py310
 [testenv]
 deps=-r{toxinidir}/requirements.txt
 
-commands= pytest --cov=titan_client
+commands= pytest --cov=titan_client --cov-report term:skip-covered
