New test suites using Pytest (#12)
* adding api_responses fixtures

* add test_api_responses.py

* add test_params.py

* remove unused import and refactored into class

* reorder imports order according to standard library and 3rd party

* refactored test_stix_mappers.py to use pytest

* add pytest to requirements.txt

* use absolute path for fixtures

* update requirements.txt

* add pytest-cov to requirements.txt

* update tox.ini

* moved test_params into test_api_response.py

* remove class definition

* test request url and params

* refactor test code to be compatible with 3.6

* only test for oldest and newest supported versions

* hide 100% covered files in coverage results

* refactored common variable and logic into conftest.py

* refactored test code for clarity

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,7 @@
 [tox]
-envlist = py27, py3
+envlist = py36, py310
 
 [testenv]
 deps=-r{toxinidir}/requirements.txt
-     -r{toxinidir}/test-requirements.txt
 
-commands=
-   pytest --cov=titan_client
+commands= pytest --cov=titan_client --cov-report term:skip-covered
