--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-future; python_version<="2.7"
 six >= 1.10
 python_dateutil >= 2.5.3
 setuptools >= 21.0.0
 urllib3 >= 1.25.3
-stix2==3.0.1
-PyYAML==6.0
+stix2 == 3.0.1
+PyYAML == 6.0
+pytest >= 7.0.1
+pytest-cov ~= 4.0.0
+tox ~= 3.27.0
