--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirments.txt
+          pip install -r requirements.txt
       - name: Run tox
         # Run tox using the version of Python in `PATH`
         run: tox -e py
