--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -8,10 +8,10 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python: ["3.6", "3.10"]
+        python: ["3.6", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
