--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt
-          pip install -r test-requirements.txt
+          python -m pip install -r .github/workflows/requirements.txt
+          python -m pip install -r .github/workflows/test-requirements.txt
       - name: Run tox
         # Run tox using the version of Python in `PATH`
         run: tox -e py
