--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,6 +28,10 @@ jobs:
         pip install build
     - name: Build package
       run: python -m build
+    - name: Rename package
+      run: |
+        FILE=$(find dist -name 'titan client*tar.gz')
+        mv "$FILE" ${FILE// /_}
     - name: Publish package to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
